fix(SelectionList): single mode no longer truncates long text
ISSUES CLOSED: #1772

--- a/terminus-ui/selection-list/src/selection-list.component.scss
+++ b/terminus-ui/selection-list/src/selection-list.component.scss
@@ -12,6 +12,12 @@ $transition-duration: 200;
 .ts-selection-list {
   cursor: cursor(pointer);
   display: block;
+
+  &.ts-selection-list--single {
+    .ts-selection-list__input {
+      width: 94%;
+    }
+  }
 }
 
 .ts-selection-list__input-wrap {
